Chat + Payement Added

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -40,6 +40,20 @@ License: You must have a valid license purchased only from themeforest(the above
     <!--! Remove this if not needed, Required only for quill editor code highlight -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.2/highlight.min.js"></script>
 
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+      var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+      (function(){
+        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+        s1.async=true;
+        s1.src='https://embed.tawk.to/638083fbb0d6371309d1093c/1gin0743r';
+        s1.charset='UTF-8';
+        s1.setAttribute('crossorigin','*');
+        s0.parentNode.insertBefore(s1,s0);
+      })();
+    </script>
+    <!--End of Tawk.to Script-->
+
     <!-- Vuexy loading Screen CSS -->
     <style type="text/css">
       #loading-bg {
