--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,21 +1,8 @@
-<!--
-Template Name: Vuexy - Vuejs, React, Angular, HTML & Laravel Admin Dashboard Template
-Author: PixInvent
-Website: http://www.pixinvent.com/
-Purchase: https://1.envato.market/vuexy_admin
-Renew Support: https://1.envato.market/vuexy_admin
-Contact: hello@pixinvent.com
-Follow: www.twitter.com/pixinvents
-Like: www.facebook.com/pixinvents
-License: You must have a valid license purchased only from themeforest(the above link) in order to legally use the theme for your project.
-
--->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Vuexy - Angular 14+ Bootstrap Admin Template</title>
+    <title>Kaddem - Se former autrement ></title>
     <base href="/" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -27,7 +14,7 @@ License: You must have a valid license purchased only from themeforest(the above
       name="keywords"
       content="admin template, dashboard template, flat admin template, responsive admin template, web app, Bootstrap, Bootstrap 4, AngularJS, Angular, Angular 2, Angular 8"
     />
-    <meta name="author" content="PIXINVENT" />
+    <meta name="author" content="MKADMI, ABOUD, TURKI" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
@@ -54,7 +41,6 @@ License: You must have a valid license purchased only from themeforest(the above
     </script>
     <!--End of Tawk.to Script-->
 
-    <!-- Vuexy loading Screen CSS -->
     <style type="text/css">
       #loading-bg {
         width: 100%;
@@ -147,11 +133,9 @@ License: You must have a valid license purchased only from themeforest(the above
         }
       }
     </style>
-    <!-- / Vuexy loading Screen CSS -->
   </head>
 
   <body>
-    <!-- Vuexy loading Screen -->
     <core-loading-screen id="loading-bg">
       <div class="loading-logo">
         <img src="assets/images/logo/logo.png" alt="Logo" />
@@ -162,10 +146,7 @@ License: You must have a valid license purchased only from themeforest(the above
         <div class="effect-3 effects"></div>
       </div>
     </core-loading-screen>
-    <!-- / Vuexy loading Screen -->
 
-    <!-- Vuexy root component -->
     <app-root> </app-root>
-    <!-- / Vuexy root component -->
   </body>
 </html>
